18 Aug 2008 - svn revision 646
[ Sreyas Kurumanghat <k.sreyas@gmail.com ]
	- Added pango support and rendering to practice game.

3 Aug 2008 - svn revision 599
[ Sreyas Kurumanghat <k.sreyas@gmail.com ]
	- Added keypress details for wrong key pressed in practice.

2008-07-09  gettextize  <bug-gnu-gettext@gnu.org>


3 Aug 2008 - svn revision 580
[ Sreyas Kurumanghat <k.sreyas@gmail.com ]
	- Added automatic keyboard layout generation in practice.c.
	- Modified the keyboard.lst file format. The current format can be any of the three below:
	- char
	- finger|char
	- finger|char|latin character
	- Features added so that the information about the keyboard gets updated each time the game is run.

13 Apr 2008 - svn revision 460
[ David Bruce <dbruce@tampabay.rr.com> ]
       - fixed small typo bug in alphabet.c (thanks Patrick Winnertz)

29 Mar 2008 - svn revision 451
[ David Bruce <dbruce@tampabay.rr.com> ]
       - new branch made called "tuxtype-new", code reorganized with
       - more standard subdirs "src", "data", "doc"; Makefile.am's
         and configure.ac updated accordingly.  After some tweaking,
         seems to work properly for configuration, "make", "make install",
         "make uninstall", "make distcheck" - and appears to run
         correctly on Linux.
       - version 1.5.17 to be released as last release from tree prior
         to reorganization.

23 Mar 2008
[ David Bruce <dbruce@tampabay.rr.com> ]
       - Nepali theme contributed by Vikal Acharya and Shakeel Shrestha

22 Feb 2008
[ David Bruce <dbruce@tampabay.rr.com> ]
       - replaced many of menu icon images with new shiny ones.

19 Feb 2008
[ David Bruce <dbruce@tampabay.rr.com> ]
       - updated remainder of Makefile.am's to use automake
         variables rather than hard-coded 'install' and 'uninstall'
         targets.

15 Feb 2008
[ David Bruce <dbruce@tampabay.rr.com> ]
       - start of rewrite of Makefile.am's for data heirarchy
         to use automake more correctly.

