@@ -1,12 +1,18 @@
-<<<<<<< .working
+18 Aug 2008 - svn revision 646
+[ Sreyas Kurumanghat <k.sreyas@gmail.com ]
+	- Added features to practice game. Now pressing the down arrow presents the next phrase for practice and the escape key quits from the game.
+
+18 Aug 2008 - svn revision 646
+[ Sreyas Kurumanghat <k.sreyas@gmail.com ]
+	- Added pango support and rendering to practice game.
+
 3 Aug 2008 - svn revision 599
 [ Sreyas Kurumanghat <k.sreyas@gmail.com ]
 	- Added keypress details for wrong key pressed in practice.
-=======
-2008-07-09  gettextize  <bug-gnu-gettext@gnu.org>
->>>>>>> .merge-right.r618
 
-<<<<<<< .working
+2008-07-09  gettextize  <bug-gnu-gettext@gnu.org>
+
+
 3 Aug 2008 - svn revision 580
 [ Sreyas Kurumanghat <k.sreyas@gmail.com ]
 	- Added automatic keyboard layout generation in practice.c.
@@ -16,14 +22,6 @@
 	- finger|char|latin character
 	- Features added so that the information about the keyboard gets updated each time the game is run.
 
-=======
-	* Makefile.am (SUBDIRS): Add po.
-	(ACLOCAL_AMFLAGS): New variable.
-	(EXTRA_DIST): Add config.rpath, m4/ChangeLog.
-	* configure.ac (AC_CONFIG_FILES): Add po/Makefile.in.
-
-
->>>>>>> .merge-right.r618
 13 Apr 2008 - svn revision 460
 [ David Bruce <dbruce@tampabay.rr.com> ]
        - fixed small typo bug in alphabet.c (thanks Patrick Winnertz)
